force-app/main/default/objects/maps__CustomAction__c/maps__CustomAction__c.object-meta.xml
<CustomObject>
    <label>Maps Custom Action</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>