force-app/main/default/objects/maps__CustomAction__c/fields/maps__BaseObjects__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjects__c</fullName>
    <description>The Base Objects that will be used to display the Custom Action</description>
    <label>BaseObjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- None --</fullName>
                <default>true</default>
                <label>-- None --</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>