force-app/main/default/objects/maps__CustomAction__c/fields/maps__Layouts__c.field-meta.xml
<CustomField>
    <fullName>maps__Layouts__c</fullName>
    <label>Layouts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tooltip</fullName>
            </value>
            <value>
                <fullName>Mass Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>