force-app/main/default/objects/maps__CustomAction__c/fields/maps__Options__c.field-meta.xml
<CustomField>
    <fullName>maps__Options__c</fullName>
    <defaultValue>&quot;{method:&apos;GET&apos;,addRecords:false}&quot;</defaultValue>
    <label>Options</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>